--- a/style.css
+++ b/style.css
@@ -221,57 +221,8 @@ h2 {
         0 0 500px rgb(1, 143, 143);
 }
 
-/* Global */
-/* html {
-    min-height: 100%;
-    overflow: hidden;
-} */
-
-/* body {
-    height: calc(100vh - 8em);
-    padding: 4em;
-    color: rgba(255, 255, 255, 0.75);
-    font-family: "Anonymous Pro", monospace;
-    background-color: rgb(25, 25, 25);
-} */
-
-.line-1 {
-    position: relative;
-    top: 50%;
-    width: 24em;
-    margin: 0 auto;
-    border-right: 2px solid rgba(255, 255, 255, 0.75);
-    font-size: 180%;
+body {
     text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    transform: translateY(-50%);
-}
-
-/* Animation */
-.anim-typewriter {
-    animation: typewriter 4s steps(44) 1s 1 normal both,
-        blinkTextCursor 500ms steps(44) infinite normal;
-}
-
-@keyframes typewriter {
-    from {
-        width: 0;
-    }
-
-    to {
-        width: 24em;
-    }
-}
-
-@keyframes blinkTextCursor {
-    from {
-        border-right-color: rgba(255, 255, 255, 0.75);
-    }
-
-    to {
-        border-right-color: transparent;
-    }
 }
 
 * { color:#fff; text-decoration: none;}
